# project_oop

./: CMakeLists.txt  CMakeLists.txt.user.1966d79
src/: main.cpp
src/controller/: artifact_controller.cpp  artifact_controller.h  command.cpp  command.h  filter.cpp  filter.h
src/domain/: artifact.cpp  artifact.h
src/repository/: csv_repository.cpp  csv_repository.h  json_repository.cpp  json_repository.h  repository.h
src/ui/: mainwindow.cpp  mainwindow.h  mainwindow.ui
tests/: CMakeLists.txt  test_main.cpp
